--- a/src/main/resources/parameter.properties
+++ b/src/main/resources/parameter.properties
@@ -8,7 +8,7 @@ ETLInput = /tmp/flink-bps-out
 
 # ETL
 # Depends on numStores, numCustomers, simLength and ETLInput from the DataGenerator component
-ETLOutput = /home/mbalassi/flink-etl-out
+ETLOutput = /tmp/flink-etl-out
 
 # ALS
 # Depends on ETLOutput from the ETL component
@@ -17,3 +17,6 @@ numFactors = 10
 lambda = .9
 customerOut = /tmp/flink-customer-factors
 productOut = /tmp/flink-product-factors
+
+# Spark
+master = local[4]
