--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@ under the License.
         <java.version>1.7</java.version>
         <scala.version>2.10.4</scala.version>
         <maven.version.min>3.2.1</maven.version.min>
-        <flink.version>1.0.0</flink.version>
+        <flink.version>1.0.3</flink.version>
+        <spark.version>1.6.1</spark.version>
     </properties>
 
     <repositories>
@@ -74,6 +75,20 @@ under the License.
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table_2.10</artifactId>
             <version>${flink.version}</version>
+        </dependency>
+
+        <!-- Spark batch API -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
+        <!-- Spark SQL API -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>${spark.version}</version>
         </dependency>
 
         <!-- Data generator -->
